--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    "typeRoots": ["src/alertyfytype.d.ts"],
     "lib": [
       "es2020",
       "dom"
